worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  labels:
    app: worker
    type: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
      type: backend
  template:
    metadata:
      labels:
        app: worker
        type: backend
    spec:
      containers:
        - name: worker
          image: dockersamples/worker:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
