db_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
    type: midle
  name: db
spec:
  type: ClusterIP
  ports:
  - name: "db-service"
    port: 5432
    targetPort: 5432
  selector:
    app: db
    type: midle
