redis_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
    type: midle
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
      type: midle
  template:
    metadata:
      labels:
        app: redis
        type: midle
    spec:
      containers:
      - image: redis:alpine
        imagePullPolicy : IfNotPresent
        name: redis
        ports:
        - containerPort: 6379
          name: redis
        volumeMounts:
        - mountPath: /data
          name: redis-data
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"  
      volumes:
      - name: redis-data
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
    type: midle
  name: redis
spec:
  type: ClusterIP
  ports:
  - name: "redis-service"
    port: 6379
    targetPort: 6379
  selector:
    app: redis
    type: midle
---
