result.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: result
    type: backend
  name: result
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
      type: backend
  template:
    metadata:
      labels:
        app: result
        type: backend
    spec:
      containers:
      - image: dockersamples/result:latest
        imagePullPolicy: IfNotPresent
        name: result
        ports:
        - containerPort: 80
          name: result
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"  
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: result
    type: backend
  name: result
spec:
  type: ClusterIP
  ports:
  - name: "result-service"
    port: 5001
    targetPort: 80
  selector:
    app: result
    type: backend
