vote.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote
    type: backend
  name: vote
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vote
      type: backend
  template:
    metadata:
      labels:
        app: vote
        type: backend
    spec:
      containers:
      - image: dockersamples/vote:latest
        imagePullPolicy: IfNotPresent
        name: vote
        ports:
        - containerPort: 80
          name: vote
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        livenessProbe:
            httpGet:
              path: /
              port: 80
            failureThreshold: 2
            timeoutSeconds: 2
            initialDelaySeconds: 5
            periodSeconds: 5
        readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5            

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote
    type: backend
  name: vote
spec:
  type: ClusterIP
  ports:
  - name: "vote-service"
    port: 5000
    targetPort: 80
  selector:
    app: vote
    type: backend
---
